opam-version: "1.2"
maintainer: "Jordan Walke <jordojw@gmail.com>"
authors: [
  "Avik Chaudhuri"
  "Basil Hosmer"
  "Gabe Levi"
  "Jeff Morrison"
  "Marshall Roch"
  "Sam Goldman"
  "James Kyle"
]
homepage: "https://github.com/facebook/flow/tree/master/src/parser"
bug-reports: "https://github.com/facebook/flow/issues"
license: "BSD3"

build: [ "sh" "-c" "cd src/parser && make ocamlfind-install" ]

remove: ["ocamlfind" "remove" "flow_parser"]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
]
available: [ocaml-version >= "4.01.0"]
dev-repo: "https://github.com/facebook/flow.git"
