opam-version: "1.2"
authors: "Jordan Walke <jordojw@gmail.com>"
maintainer: "Jordan Walke <jordojw@gmail.com>"
dev-repo: "https://github.com/esy-ocaml/flow-parser.git"
homepage: "https://github.com/esy-ocaml/flow-parser"
bug-reports: "https://github.com/esy-ocaml/flow-parser/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocamlfind" {build}
  "dune" {build & >= "1.0"}
  "sedlex"
  "wtf8"
]
